# torrent_client

./: CMakeLists.txt  sample.torrent
src/core/: bencode.cpp  bencode.hpp  torrent.cpp  torrent.hpp
src/io/: file_handler.cpp  file_handler.hpp
src/network/: tracker.cpp  tracker.hpp
test/: test_network.cpp  test_parser.cpp  test_torrent.cpp
